# mcp_search_docs

./: .env  .env.example  .gitignore  README.md  docs_list.py  main.py  prompts.py  pyproject.toml  test_data.py
module/: checking_doc.py  utils.py
